--- a/app.json
+++ b/app.json
@@ -28,6 +28,14 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      [
+        "expo-image-picker",
+        {
+          "cameraPermission": "여러분이 사랑하는 장소에 접근하기 위해서는 카메라 허용이 필요해요"
+        }
+      ]
+    ]
   }
 }
