--- a/app.json
+++ b/app.json
@@ -33,7 +33,7 @@
       [
         "expo-image-picker",
         {
-          "cameraPermission": "여러분이 사랑하는 장소에 접근하기 위해서는 카메라 허용이 필요해요"
+          "cameraPermission": "dsa"
         }
       ]
     ]
